# coffee

./: CMakeLists.txt  SetupTableModel.cpp  SetupTableModel.h  coffeeinput.cpp  coffeeinput.h  coffeeinput.ui  coffeesetup.h  initialsettings.cpp  initialsettings.h  initialsettings.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsupdate.cpp  settingsupdate.h  settingsupdate.ui
